creusot/tests/should_fail/prusti/blocked_lifetime/implied.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `'a` in state `'post`
 --> implied.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

